Move to modular structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_compile_options(
     -ggdb
--pedantic-errors
--Wall
--Weffc++
--Wextra
--Wconversion
--Wsign-conversion
--Werror
+    -pedantic-errors
+    -Wall
+    -Weffc++
+    -Wextra
+    -Wconversion
+    -Wsign-conversion
+    -Werror
 )
 
 enable_testing()
 
-configure_file(LearnCppConfig.h.in LearnCppConfig.h)
+configure_file(learn_cpp_config.h.in learn_cpp_config.h)
 
-add_executable(LearnCpp main.cpp)
-target_include_directories(LearnCpp PUBLIC
-    "${PROJECT_BINARY_DIR}"
-)
+add_subdirectory(learn_1_6)
