--- a/learn_1_6/CMakeLists.txt
+++ b/learn_1_6/CMakeLists.txt
@@ -1,14 +1,14 @@
-add_library(LearnCppCode16 STATIC
+add_library(learn_1_6 STATIC
     learn_1_6_initialization.cpp
 )
-target_link_libraries(LearnCppCode16 PRIVATE common)
+target_link_libraries(learn_1_6 PRIVATE common)
 
-target_include_directories(LearnCppCode16 PUBLIC "${PROJECT_BINARY_DIR}")
+target_include_directories(learn_1_6 PUBLIC "${PROJECT_BINARY_DIR}")
 
-add_executable(LearnCppCode16Test "test.cpp")
+add_executable(learn_1_6_test "learn_1_6_test.cpp")
 
-target_link_libraries(LearnCppCode16Test PRIVATE common)
-target_link_libraries(LearnCppCode16Test PUBLIC LearnCppCode16)
+target_link_libraries(learn_1_6_test PRIVATE common)
+target_link_libraries(learn_1_6_test PUBLIC learn_1_6)
 
-add_test(NAME LearnCppCode16Initialization
-         COMMAND LearnCppCode16Test)
+add_test(NAME learn_1_6_initialization 
+         COMMAND learn_1_6_test)
