--- a/learn_cpp_config.h.in
+++ b/learn_cpp_config.h.in
@@ -1,3 +1,3 @@
-// the configured options and settings for Tutorial
-#define LearnCpp_VERSION_MAJOR @LearnCpp_VERSION_MAJOR@
-#define LearnCpp_VERSION_MINOR @LearnCpp_VERSION_MINOR@
+// the configured options and settings from CMake
+#define LearnCpp_VERSION_MAJOR @LearnCpp_VERSION_MAJOR@ // NOLINT(modernize-macro-to-enum)
+#define LearnCpp_VERSION_MINOR @LearnCpp_VERSION_MINOR@ // NOLINT(modernize-macro-to-enum)T
